Worked on paper

--- a/writeups/paper/paper.tex
+++ b/writeups/paper/paper.tex
@@ -40,6 +40,7 @@
 \newtheorem{rmk}{Remark}
 \newtheorem{note}{NOTE}
 \newtheorem{method}{Method}
+\newtheorem*{method*}{Method}
 
 \theoremstyle{definition}
 \newtheorem*{def*}{Definition}
@@ -160,38 +161,39 @@
 \maketitle
 
 \section{Introduction}
-\cite{edge}\cite{gottcha}\cite{ecol_net_rev}\cite{mic_int}\cite{machine_learning}\cite{PhysRevE.70.056131}\cite{PhysRevE.70.066111}\cite{cyotscape}
+\cite{edge}\cite{gottcha}\cite{ecol_net_rev}\cite{mic_int}\cite{machine_learning}\cite{PhysRevE.70.056131}\cite{PhysRevE.70.066111}\cite{cyotscape}\cite{gut}
 \section{Network Construction}
 
 \subsection{Correlation construction}
-We construct a network based on sample correlation, as in \cite{gut}. With $N$ samples, that is:
+We construct an undirected, weighted graph with nodes from the set of taxa in the GOTTCHA output of metagenomic samples. Edges correspond to correlation between taxa across samples. If $\b{x}$ is the vector of abundances of a certain taxa, and $\b{y}$ is the vector of abundances of another, we compute the correlation of these two vectors (with $N$ samples):
 \[
 \rho_{xy} = \frac{1}{N}\frac{(\b{x}- \mu_x\b{1}) \cdot (\b{y} - \mu_y\b{1})}{\sigma_x \sigma_y}
 \]
-where $\mu_x$ is the mean abundance of taxa $x$, and $\sigma_x$ is the standard deviation of abundance of taxa $x$ across samples. This can be constructed by modifying the data matrix and then multiplying with it's transpose, making it much faster to compute than the binning method. In expectation, this the co-variance divided by the product of the variances. I then construct a graph with weighted edges
+where $\mu_x$ is the mean abundance of taxa $x$, and $\sigma_x$ is the standard deviation of abundance of taxa $x$ across samples. These correlations can be efficiently computed from a matrix whose columns correspond to the GOTTCHA output (in taxa abundance) of metagenomic samples, and rows corresponding to the abundances of taxa across samples. Finally, if $\b{r}_i$ is the vector of abundances of taxa $i$, and $\b{r}_k$ is a vector of abundances of taxa $k$, we compute
 \[
 w_{ik} = \left\{\begin{array}{c c}
 \rho_{\b{r}_i\b{r}_k} & \rho_{\b{r}_i\b{r}_k}\geq 0.8\\
 0 &  \rho_{\b{r}_i\b{r}_k}< 0.8
 \end{array}\right.
 \]
+and take an edge from taxa $i$ to taxa $k$ with weight $w_{ik}$ (where an edge with weight $0$ implies no edge).
 
-Alternatively, I can first ``thresh-hold" the abundances given, converting to binary presence/absence data. To do this, I find the mean of all non-zero abundance values $\mu_{nz}$, and then
+Alternatively, we can first ``thresh-hold" the abundances given, converting to binary presence/absence data. To do this, we find the mean of all non-zero abundance values $\mu_{nz}$, and take
 \[
 r^*_{ij} = \left\{\begin{array}{c c}
 1 & r_{ij} \geq 0.01\mu_{nz}\\
 0 & r_{ij} < 0.01 \mu_{nz}
 \end{array}\right.
 \]
-The network is then constructed using sample correlation just as before.
+where $r_{ij}$ is the the abundance of taxa $i$ in sample $j$. The network is then constructed using correlation just as before.
 
-Again, I check the significance of each edge, removing edges that have a high probability of occurring in a null model. I check this using Monte-Carlo simulation by estimating $p_{ik} \approx P(\rho_{\b{r}_i^{null}\b{r}_k^{null}} > \rho_{\b{r}_i\b{r}_k})$. I take enough Monte-Carlo trials for a $95\%$ confidence interval of length $0.03$. I then adjust edges so that
+Again, we check the significance of each edge, removing edges that have a high probability of occurring in a null model. We check this using Monte-Carlo simulation by estimating $p_{ik} \approx P(\rho_{\b{r}_i^{null}\b{r}_k^{null}} > \rho_{\b{r}_i\b{r}_k})$. In construction, we take enough Monte-Carlo trials for a $95\%$ confidence interval of length $0.03$. We then adjust edges so that
 \[
 p_{ik} > 0.05 \Rightarrow w_{ik} = 0
 \]
 
 \subsection{Null Model}\label{null}
-Rather than simply generate an Erd\H{o}s-R\'{e}nyi random graph with some chosen parameter, I generate a graph that more closely reflects the idea of random data. That is, I start with random data and then generate a graph. I generate random data in the following way. Let 
+Rather than simply generate an Erd\H{o}s-R\'{e}nyi random graph with some chosen parameter, we generate a graph that more closely reflects the idea of random data. That is, we start with random data that resembles our real data, and then generate a graph. The random data is generated in the following way. Let 
 \[
 N_j = |\{i: r_{ij} \neq 0\}|
 \]
@@ -199,23 +201,23 @@ and
 \[
 P_i = \frac{|\{j: r_{ij}\neq 0 \}|}{|\{(i,j): r_{ij}\neq 0 \}|}
 \]
-then I take 
+then take 
 \[
 \hat{r}_{ij} = \mathit{binom}(N_j,P_i)
 \]
 as randomly generated abundance data. The values $N_i$ are the counts of appearances of taxi $i$, while the values $P_j$ are the proportions of all appearances which happen within each sample. 
 		
-Then, I construct our random graph from this random data. If $\hat{\b{r}}_i$ is the vector of random ``abundances" of taxa $i$, I have edges
+Then, we construct our null model graph from this random data. If $\hat{\b{r}}_i$ is the vector of random ``abundances" of taxa $i$, the null graph has edges
 \[
 w_{ik}^{null} = \frac{1}{N}\frac{(\b{\hat{\b{r}}_i}- \hat{\mu}_i\b{1}) \cdot (\hat{\b{r}}_k - \hat{\mu}_k\b{1})}{\hat{\sigma}_i \hat{\sigma}_k}
 \]
 
 The null model's use of a binomial random variable can be interpreted in the following way. A ``success" for a taxa/sample pair is an appearance of the taxa in the sample. The number of trials is the number of times the taxa appears in the data set. The probability of success is the proportion of all appearances which happen within the sample. This does have some drawbacks: notably that it does not preserve total abundance, or even total appearances. It allows more than one ``success" for a single taxa/sample pair, which could be interpreted as higher abundance. Our ``random samples" should be scaled by average abundances of a taxa across samples to ``look like" real data. This doesn't effect correlation, because $\mathit{Cov}(ax,by) = ab\mathit{Cov}(x,y)$, and $\sigma_x = \mathit{Cov}(x,x)^{\nhalf}$, implying that $w_{ik} = \mathit{Cor}(\hat{\b{r}}_i,\hat{\b{r}}_k) =  \mathit{Cor}(a\hat{\b{r}}_i,b\hat{\b{r}}_k)$. Notice also that the null model is the same as in the binning procedure, with a different construction of a correlation graph.
 
-In \cite{coocc}, this model is called the ``binomial model". Interestingly, that paper argues that an ``edge swapping" model is more accurate. A random permutation of the data also used in \cite{gut}. However, I have chosen the binomial model for speed.
+In \cite{coocc}, this model is called the ``binomial model". Interestingly, that paper argues that an ``edge swapping" model is more accurate, but slower to construct and so less suitable for Monte-Carlo methods. A random permutation of the data used in \cite{gut}.
 
 \subsection{Significance of the network}\label{sig}
-The networks connected by the methods above would not occur in randomized data, and so there is some significance to these networks. I generate random data as in the correlation construction of the network. I then use Monte-Carlo simulation to estimate the following
+The networks connected by the methods above would not occur in randomized data, and so there is some significance to these networks. In a Monte-Carlo simulation, networks are generated according to the null mode in order to estimate the following
 \begin{itemize}
 	\item $P(\mu_d < \mu_d^{null})$, where $\mu_d$ is the mean degree of the nodes of a network
 	\item $P(\sigma_d < \sigma_d^{null})$, where $\sigma_d$ is the variance of degrees of the nodes of a network
@@ -224,10 +226,7 @@ The networks connected by the methods above would not occur in randomized data, 
 	\item $P(|\cE| < |\cE^{null}|)$
 \end{itemize} 
 
-The result with $10,000$ Monte Carlo trials was that it was extremely rare for a network constructed from a null model to have higher mean degree, higher degree variance, larger maximum eigenvalue, smaller minimum eigenvalue, or more edges. This suggests that the networks constructed from real data would be very unexpected according to the null model. 
-
-In addition to testing the complete network, I performed the same analysis on networks built from randomly drawn subsets of the data.
-
+The result with $10,000$ Monte Carlo trials show that it was extremely rare for a network constructed from the null model to have higher mean degree, higher degree variance, larger maximum eigenvalue, smaller minimum eigenvalue, or more edges. This suggests that the networks constructed from real data would be very unexpected according to the null model. 
 \begin{figure}
 	\includegraphics[scale = 0.4]{../../stat_figs/pears_1000__species.png}
 	\caption{The result of Monte-Carlo estimation of the likelihood of various network statistics, as well as the number of edges and mean degree. The networks were made from correlations using randomly drawn subsets of increasing size of the data at the species level, from 1 sample to 60 samples. Samples were GOTTCHA output of data from (FIND OUT). For each network, 1000 random trials were generated according to the above null model in order to estimate likelihood of statistics.}\label{montecarlos}
@@ -238,11 +237,11 @@ In addition to testing the complete network, I performed the same analysis on ne
 \section{Taxonomic Classification Analysis}
 
 
-We would like to identify taxa likely to be present in a sample, given an initial estimate of abundances of taxa. Inspired by spectral clustering, I solve the diffusion equation on the graph in order to identify nodes that are likely present, given the sample data. The diffusion equation is
+We would like to identify taxa likely to be present in a sample, given an initial estimate of abundances of taxa. Inspired by spectral clustering, we may solve the diffusion equation on the graph in order to identify nodes that are likely present, given the sample data. The diffusion equation is
 \[
 \frac{\partial}{\partial t} u(v,t) = L u(v,t)
 \]
-where $v$ takes values in the vertex set of the graph. Then, we can encode ``known" information in three ways: initial values, boundary values, or a forcing vector.
+where $v$ takes values in the vertex set of the graph. Then, we encode ``known" information in the initial values.
 
 \begin{inbox2}
 	\begin{method}[Initial Value Problem]\label{initalCond}
@@ -304,22 +303,20 @@ where $t_i \in S$ indicates taxa $i$ is present in a sample, and $m(S)$ is the G
 
 Suppose we have different networks built from different types of data - i.e. healthy and unhealthy, or different regions, etc. We would like to match a sample with the network that makes most the sense. That is, we would like to say that a sample is more likely to be from one type of data than the other based on the network.
 
-Clearly, the first pass is just asking how many taxa detected in the sample appear in each network. Next, we might ask how many clusters of a network are represented, or similarly how many taxa of the sample are in the same cluster in the network. The diffusion (\cref{initalCond}) idea can do something like this. We should see less nodes ranked highly that aren't in the sample if the sample ``fits" a network well. If we imagine a sample is created by performing a random walk on a graph and recording the nodes most often visited, the diffusion idea should identify nodes that the random walk ``should" have seen. If there are a bunch of those missing from the sample, we might think the network is not the right one. We could consider the map from rank to abundance, and integrate this against a kernel that weights towards the high ranks. As an example, let $\b{s}$ be the sample abundances (so $s_i$ is the abundance of organism $i$), and $\b{r}$ the ranking (so $r_i$ is the rank of organism $i$). We might take 
+If the sample ``fits" a network well, \cref{initalCond} should return nodes ranked highly which have nonzero and perhaps high abundance. If we imagine a sample is created by performing a random walk on a graph and recording the nodes most often visited, \cref{initalCond} should identify nodes that the random walk ``should" have seen often. If there are a bunch of those missing from the sample, we might think the network is not the right one. We could consider the map from rank to abundance, and integrate this against a kernel that weights towards the high ranks. Let $\b{s}$ be the sample abundances (so $s_i$ is the abundance of organism $i$), and $\b{\sigma}$ the ranking. We take 
 \[
-F(\b{s},\b{r}) = \sum_{i=1}^n c^{\nicefrac{r_i}{n}} s_i
+F(\b{s},\b{\sigma}) =\frac{1}{\|\b{s}\|} \sum_{i=1}^n c^{\nicefrac{\sigma_i}{n}} s_i
 \]
-where $c<1$. Given a sample, we get ranking from a network $N_j$. Let $\b{r}^j(\b{s})$ be the ranking given by diffusion on network $j$. Then,
+where $c<1$. Given a sample, we get ranking from a network $N_j$. Let $\b{\sigma}^j(\b{s})$ be the ranking given by diffusion on network $j$. Then,
 \[
-F_j(\b{s}) = F(\b{s},\b{r}^j(\b{s})) = \sum_{i=1}^n c^{\nicefrac{r_i}{n}} s_i
+F_j(\b{s}) = F(\b{s},\b{\sigma}^j(\b{s})) = \frac{1}{\|\b{s}\|} \sum_{i=1}^n c^{\nicefrac{\sigma^j_i}{n}} s_i
 \]
-and we can attempt to optimize over the networks we have (if there's only a few that's easy). The conjecture is then
+and we can attempt to optimize over the networks. We can then conjecture
 \begin{conj}
 	Assume that $F_j(\b{s}) > F_k(\b{s})$. Then $P(\b{s}|N_j) > P(\b{s}|N_k)$.
 \end{conj}
 
-
-
-Let's start with a very simple example. Consider the two networks shown in \cref{more_tests}. Using ``samples" $u_1 = (\nicefrac{1}{6},\nhalf,\nicefrac{1}{3},0,0,0)$, $u_2 = (\nicefrac{1}{6},\nhalf,0,0,\nicefrac{1}{3},0)$, and $u_3= (0,0,0,\nicefrac{1}{6},\nhalf,\nicefrac{1}{3})$ gave results shown in \cref{tiny_res}.
+We begin with a very simple example. Consider the two networks shown in \cref{more_tests}. Using ``samples" $u_1 = (\nicefrac{1}{6},\nhalf,\nicefrac{1}{3},0,0,0)$, $u_2 = (\nicefrac{1}{6},\nhalf,0,0,\nicefrac{1}{3},0)$, and $u_3= (0,0,0,\nicefrac{1}{6},\nhalf,\nicefrac{1}{3})$ gave results shown in \cref{tiny_res}.
 
 
 \begin{figure}
@@ -373,7 +370,7 @@ Let's start with a very simple example. Consider the two networks shown in \cref
 	\caption{Results of sample assignment: $u_1$ cannot be decided, $u_2$ is assigned to network $A_1$, and $u_3$ is assigned to network $A_2$.}\label{tiny_res}
 \end{figure}
 
-I did the same on a column of training data for the species level network, a column of data that was held out of the network building, and a randomly generated sample. The results, shown in \cref{full_assign}, have the training data and held out data more likely to ``fit" the network than the random data.
+We performed the same experiment on a column of training data for the species level network, a column of data that was held out of the network building, and a randomly generated sample. The results, shown in \cref{full_assign}, have the training data and held out data more likely to ``fit" the network than the random data.
 
 \begin{figure}
 	\begin{subfigure}[b]{0.9\linewidth}
@@ -397,22 +394,9 @@ I did the same on a column of training data for the species level network, a col
 	\caption{A training data column fits the network better than a randomly generated sample.}\label{full_assign}
 \end{figure}
 
-Formally, we have
-\[
-F_j(\b{s}) =\frac{1}{\|\b{s}\|} \sum_{i=0}^{n-1} c^{\nicefrac{i}{n}} s_i
-\]
-where $\b{s} = (u_{j_1}(0),u_{j_2}(0),...,u_{j_n}(0))$ such that if 
-\[
-\frac{d}{dt}\b{u} = -L\b{u}
-\]
-and $U_l = \int_0^{\infty} u_l(t) dt$ then
-\[
-U_{j_1} \geq U_{j_2} \geq \cdots \geq U_{j_n}
-\]
-
 \section{Validation}
 
-To validate this approach, we build correlation and thresholded correlation networks from GOTTCHA output of 1,367 samples from the NIH Human Microbiome Project (\verb|08_14_14_57_networks|). We constructed a network using all of these samples, as well as networks for 6 body sites for which at least 50 samples were present in the full 1,367:
+To validate this approach, we built correlation and thresholded correlation networks from GOTTCHA output of 1,367 samples from the NIH Human Microbiome Project (\verb|08_14_14_57_networks|). We constructed a network using all of these samples, as well as networks for 6 body sites for which at least 50 samples were present in the full 1,367:
 \begin{itemize}
 	\item Anterior Nares (168 samples) 
 	\item Buccal Mucosa (206 samples)
@@ -425,9 +409,35 @@ For each network we assessed the significance of the statistics listed in \cref{
 
 We analyzed 300 samples from the NIH Human Microbiome Project that were not used in the network training. We computed the fit score of each sample on a the networks made from the set of 1,367 samples, as well as the body site networks. We hoped to analyze the fit score's use in identifying the body site a sample was taken from. We compared fit of each sample across networks to identify the body site. 
 
-We also computed the fit on the full networks of simulated samples created using the null model describe in \cref{null}. 
+\begin{figure}
+	\begin{center}
+	\includegraphics[scale = 0.4]{../correct_ids.png}
+	\end{center}
+	\caption{Proportion of samples from each body site that were correctly assigned to their body site by taking the best fit to the various body site networks (genus level).}
+\end{figure}
+
+We also computed the fit on the full networks of simulated samples created using the null model describe in \cref{null}.
+
+\begin{figure}
+	\begin{center}
+	\includegraphics[scale = 0.4]{../fit_histo_cor.png}
+	\end{center}
+	\caption{Network fit scores of 300 hold out columns (top) to the correlation network built with all of the data, and fit of 300 simulated samples (bottom) constructed using the null model described in \cref{null} (genus level).}
+\end{figure} 
 
 For each sample, we also performed the following experiment. We set the taxa with $n^{th}$ highest abundance in the sample to $0$ abundance and used the diffusion method to find the rank of this taxa, for $n$ from 1 to 100.
+
+\begin{figure}
+	\begin{subfigure}[h]{0.45\textwidth}
+		\includegraphics[scale = 0.5]{../rank_v_rank_cor.png}
+		\caption{Result with correlation network. (This is weird and looks like a bug, but it may be an artifact of the fact that there aren't enough non-zero entries in the columns at the genus level. That doesn't explain the weird periodicity though)}
+	\end{subfigure}
+	\begin{subfigure}[h]{0.45\textwidth}
+	\includegraphics[scale = 0.5]{../rank_v_rank_thr.png}
+	\caption{Result with thresholded correlation network. (This is weird and looks like a bug, but it may be an artifact of the fact that there aren't enough non-zero entries in the columns at the genus level. That doesn't explain the weird periodicity though)}
+\end{subfigure}
+\caption{Results of set the taxa with $n^{th}$ highest abundance in the sample to $0$ abundance and used the diffusion method to find the rank of this taxa, for $n$ from 1 to 100. The plots are histograms of the result, and the ``diffusion rank" plotted is the node rank minus the number of non-zero values in the sample. Thus, a rank less than zero indicates the taxa is ranked higher (after being ``removed" from the sample) than some taxa with non-zero abundance (genus level).}
+\end{figure}
 
 \section{Discussion}
 
